--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -894,7 +894,7 @@
 						 						<span th:text="#{label.durata}">Durata</span>
 						 					</label>
 						 					<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="durata">
-						 						<div class="value-edit" th:text="${eventoWrapper.evento.durata}"></div>
+						 						<div class="value-edit" th:text="${T(it.tredi.ecm.utils.Utils).formatOrario(eventoWrapper.evento.durata)}"></div>
 						 					</div>
 						 					<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.durata')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.durata')}__}"></div>
 						 				</div>
@@ -941,11 +941,11 @@
 															<td th:text="${metodologia.key.nome}"></td>
 															<td>
 																<span th:if="${metodologia.key.metodologia == T(it.tredi.ecm.dao.enumlist.TipoMetodologiaEnum).FRONTALE}"
-																	th:text="${metodologia.value} + ' h'"></span>
+																	th:text="${T(it.tredi.ecm.utils.Utils).formatOrario(metodologia.value)}"></span>
 															</td>
 															<td>
 																<span th:if="${metodologia.key.metodologia == T(it.tredi.ecm.dao.enumlist.TipoMetodologiaEnum).INTERATTIVA}"
-																	th:text="${metodologia.value} + ' h'"></span>
+																	th:text="${T(it.tredi.ecm.utils.Utils).formatOrario(metodologia.value)}"></span>
 															</td>
 														</tr>
 														<tr>
@@ -953,10 +953,10 @@
 																<strong><span class="text-uppercase" th:text="#{label.totale_ore}"></span></strong>
 															</td>
 															<td>
-																<strong><span th:text="${eventoWrapper.evento.riepilogoRES.totaleOreFrontali} + ' h'"></span></strong>
+																<strong><span th:text="${T(it.tredi.ecm.utils.Utils).formatOrario(eventoWrapper.evento.riepilogoRES.totaleOreFrontali)}"></span></strong>
 															</td>
 															<td>
-																<strong><span th:text="${eventoWrapper.evento.riepilogoRES.totaleOreInterattive} + ' h'"></span></strong>
+																<strong><span th:text="${T(it.tredi.ecm.utils.Utils).formatOrario(eventoWrapper.evento.riepilogoRES.totaleOreInterattive)}"></span></strong>
 															</td>
 														</tr>
 													</tbody>
