Bugfix ricerca su eventi

--- a/src/main/resources/templates/ricerca/ricercaEvento.html
+++ b/src/main/resources/templates/ricerca/ricercaEvento.html
@@ -203,7 +203,7 @@
 									</label>
 
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="eventoId">
-										<input type="text" pattern="numeric" class="form-control" th:field="${ricercaEventoWrapper.campoIdEvento}" />
+										<input type="text" class="form-control" th:field="${ricercaEventoWrapper.campoIdEvento}" />
 									</div>
 								</div>
 
