modifiche valutazione (storicizzazione) e verbale flusso standard

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1326,7 +1326,10 @@ li.listStyle-elenco > label{
 	width: 300px;
 }
 
-
 .text-full-length{
 	white-space: nowrap;
+}
+
+.show-calendar {
+	z-index: 99999;
 }
