--- a/src/main/resources/templates/fragments/common-allegatiext.html
+++ b/src/main/resources/templates/fragments/common-allegatiext.html
@@ -9,13 +9,12 @@
 <body>
 <th:block th:fragment="common">
 	<!-- Modale che contiene iframe per gestire il processo di frimaWeb -->
-	<div id="modalFrame" class="modal" tabindex="-1" role="dialog" >
-		<div role="document" style="margin: 30px auto; width: 520px;">
+	<div id="modalFrame" class="modal modal-firma" data-model-index="1"  role="dialog" >
+		<div class="modal-dialog" style="margin: 30px auto; width: 520px;">
 			Modal content
 			<div class="modal-content">
 				<div class="modal-header">
-					<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
-						</button>
+					<button type="button" class="close" onclick="$('#modalFrame').hide();" data-dismiss="modal"><span aria-hidden="true">×</span></button>
 				</div>
 				<div class="modal-body">
 					<iframe id="firmaFrame" src="" class="frame_invisible"></iframe>
