Bugfix in creazione DatiAccreditamento

--- a/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
@@ -27,6 +27,7 @@
 						<th:block th:unless="${showOnly}">
 							<input type="hidden" name="editId" th:value="${datiAccreditamentoWrapper.datiAccreditamento.id}" />
 							<input type="hidden" th:field="${datiAccreditamentoWrapper.accreditamentoId}" />
+							<input type="hidden" th:field="${datiAccreditamentoWrapper.providerId}" />
 							<input type="hidden" th:field="${datiAccreditamentoWrapper.idEditabili}" />
 							<!-- <input type="hidden" th:field="${datiAccreditamentoWrapper.provider.id}" /> -->
 							<input type="hidden" th:field="${datiAccreditamentoWrapper.statoAccreditamento}" />
