--- a/src/main/resources/templates/evento/eventoShow.html
+++ b/src/main/resources/templates/evento/eventoShow.html
@@ -149,7 +149,9 @@
 										<td th:text="${attivita.orarioInizio}"></td>
 										<td th:text="${attivita.orarioFine}"></td>
 										<td th:text="${attivita.argomento}"></td>
-										<td th:text="${attivita.docente?.anagrafica?.cognome}"></td>
+										<td>
+											<div th:text="${docente.anagrafica?.cognome}" th:each="docente, row : ${attivita.docenti}"></div>
+										</td>
 										<td th:text="${attivita.risultatoAtteso}"></td>
 										<td th:text="${attivita.obiettivoFormativo?.nome}"></td>
 										<td th:text="${attivita.metodologiaDidattica?.nome}"></td>
