--- a/src/main/resources/templates/evento/eventoFADEdit.html
+++ b/src/main/resources/templates/evento/eventoFADEdit.html
@@ -49,9 +49,9 @@
 									</label>
 									<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="razionale">
 										<select
-											id="addAttivitaFAD-docente"
+											id="addAttivitaFAD-docente" multiple="multiple"
 											class="selectpicker selectDocente"
-											th:field="*{docente}"
+											th:field="*{docenti}"
 											data-width="100%" data-style="btn-primary"
 											data-actions-box="true" data-size="10"
 											data-hide-disabled="false"
