--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -9,6 +9,147 @@
 		<div class="row">
 			<div class="col-xs-12">
 
+				<!-- modale modifica verbale  -->
+				<th:block th:if="${#authentication.principal.hasProfile('SEGRETERIA')
+					and accreditamentoWrapper.accreditamento.isValutazioneSulCampo()
+					and accreditamentoWrapper.accreditamento.isStandard()}">
+					<div id="verbale-edit-modal" class="modal fade modal-verbale-edit"
+						data-model-index="1" role="dialog">
+						<div class="modal-dialog modal-lg">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal">
+										<span aria-hidden="true">×</span>
+									</button>
+									<h4 class="modal-title" id="myModalLabel"
+										th:text="#{label.modifica_verbale_valutazione_sul_campo}"></h4>
+								</div>
+								<div class="modal-body">
+									<form id="formVerbaleEdit" class="form-horizontal"
+										th:action="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/verbale/edit|}"
+										method="post" enctype="multipart/form-data"
+										novalidate="novalidate">
+
+										<!-- GIORNO -->
+										<div class="item form-group" th:classappend="${#fields.hasErrors('accreditamentoWrapper.verbaleValutazioneSulCampo.giorno')} ? 'bad'">
+											<label class="control-label col-md-4 col-sm-4 col-xs-12" for="dataVerifica">
+												<span th:text="#{label.data_verifica_loco}">Data della verifica in loco</span>
+												<span class="required">*</span>
+											</label>
+											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12 input-group datapick">
+												<input type="text" id="dataVerifica" class="form-control"
+													name="data" th:field="${accreditamentoWrapper.verbaleValutazioneSulCampo.giorno}" />
+												<span class="input-group-addon" id="dataInizio" onclick="$('#dataVerifica').click()">
+						 							<i class="glyphicon glyphicon-calendar"></i>
+												</span>
+											</div>
+											<div th:if="${#fields.hasErrors('accreditamentoWrapper.verbaleValutazioneSulCampo.giorno')}" class="alert" th:errors="${accreditamentoWrapper.verbaleValutazioneSulCampo.giorno}"></div>
+										</div>
+
+										<div class="divider"></div>
+
+										<!-- BLOCCO SELEZIONE VALUTATORI -->
+										<!-- componente crecm -->
+										<div class="item form-group" th:classappend="${#fields.hasErrors('accreditamentoWrapper.verbaleValutazioneSulCampo.teamLeader')} ? 'bad'">
+											<label class="control-label col-md-4 col-sm-4 col-xs-12" for="valutatoreCRECM">
+												<span th:text="#{label.componente_crec_team_leader}">Componente CRECM - Team Leader</span>
+												<span class="required">*</span>
+											</label>
+											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+												<select id="valutatoreCRECM"
+													class="selectpicker"
+													th:field="${accreditamentoWrapper.verbaleValutazioneSulCampo.teamLeader}"
+													data-width="100%" data-style="btn-primary"
+													data-size="10"
+													data-hide-disabled="false"
+													title="Seleziona il Team Leader...">
+													<option
+														th:each="componente, row: ${accreditamentoWrapper.componentiCRECM}"
+														th:value="${componente.id}"
+														th:text="${componente.getFullNameBase()}">
+													</option>
+												</select>
+											</div>
+											<div th:if="${#fields.hasErrors('accreditamentoWrapper.verbaleValutazioneSulCampo.teamLeader')} ? 'bad'" class="alert" th:errors="${accreditamentoWrapper.verbaleValutazioneSulCampo.teamLeader}"></div>
+										</div>
+										<!-- osservatore regionale -->
+										<div class="item form-group" th:classappend="${#fields.hasErrors('accreditamentoWrapper.verbaleValutazioneSulCampo.osservatoreRegionale')} ? 'bad'">
+											<label class="control-label col-md-4 col-sm-4 col-xs-12" for="osservatoreRegionale">
+												<span th:text="#{label.osservatore_regionale}">Osservatore Regionale</span>
+												<span class="required">*</span>
+											</label>
+											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+												<select id="osservatoreRegionale"
+													class="selectpicker"
+													th:field="${accreditamentoWrapper.verbaleValutazioneSulCampo.osservatoreRegionale}"
+													data-width="100%" data-style="btn-primary"
+													data-size="10"
+													data-hide-disabled="false"
+													title="Seleziona l'Osservatore Regionale...">
+													<option
+														th:each="osservatore, row: ${accreditamentoWrapper.osservatoriRegionali}"
+														th:value="${osservatore.id}"
+														th:text="${osservatore.getFullNameBase()}">
+													</option>
+												</select>
+											</div>
+											<div th:if="${#fields.hasErrors('accreditamentoWrapper.verbaleValutazioneSulCampo.osservatoreRegionale')} ? 'bad'" class="alert" th:errors="${accreditamentoWrapper.verbaleValutazioneSulCampo.osservatoreRegionale}"></div>
+										</div>
+										<!-- componenti segreteria -->
+										<div class="item form-group" th:classappend="${#fields.hasErrors('accreditamentoWrapper.verbaleValutazioneSulCampo.componentiSegreteria')} ? 'bad'">
+											<label class="control-label col-md-4 col-sm-4 col-xs-12" for="componentiSegreteria">
+												<span th:text="#{label.componenti_segreteria}">Componenti Segreteria</span>
+												<span class="required">*</span>
+											</label>
+											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+												<select id="componentiSegreteria" class="selectpicker multi"
+													th:field="${accreditamentoWrapper.verbaleValutazioneSulCampo.componentiSegreteria}"
+													multiple="multiple" data-width="100%"
+													data-style="btn-primary" data-actions-box="true"
+													data-size="10" title="Seleziona i Componenti della Segreteria..."
+													th:remove="all-but-first">
+													<option th:each="segretario, row: ${accreditamentoWrapper.componentiSegreteria}"
+														th:value="${segretario.id}" th:text="${segretario.getFullNameBase()}">
+													</option>
+												</select>
+											</div>
+											<div th:if="${#fields.hasErrors('accreditamentoWrapper.verbaleValutazioneSulCampo.componentiSegreteria')} ? 'bad'" class="alert" th:errors="${accreditamentoWrapper.verbaleValutazioneSulCampo.componentiSegreteria}"></div>
+										</div>
+										<!-- referente informatico -->
+										<div class="item form-group" th:classappend="${#fields.hasErrors('accreditamentoWrapper.verbaleValutazioneSulCampo.referenteInformatico')} ? 'bad'">
+											<label class="control-label col-md-4 col-sm-4 col-xs-12" for="referenteInformatico">
+												<span th:text="#{label.referente_informatico}">Referente Informatico</span>
+												<span class="required" th:if="${#sets.contains(accreditamentoWrapper.accreditamento.datiAccreditamento.procedureFormative, T(it.tredi.ecm.dao.enumlist.ProceduraFormativa).FAD)}">*</span>
+											</label>
+											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
+												<select id="referenteInformatico" class="selectpicker"
+													th:field="${accreditamentoWrapper.verbaleValutazioneSulCampo.referenteInformatico}"
+													data-width="100%"
+													data-style="btn-primary"
+													data-size="10" title="Seleziona il Referente Informatico..."
+													th:remove="all-but-first">
+													<option th:each="referente, row: ${accreditamentoWrapper.referentiInformatici}"
+														th:value="${referente.id}" th:text="${referente.getFullNameBase()}">
+													</option>
+												</select>
+											</div>
+											<div th:if="${#fields.hasErrors('accreditamentoWrapper.verbaleValutazioneSulCampo.referenteInformatico')} ? 'bad'" class="alert" th:errors="${accreditamentoWrapper.verbaleValutazioneSulCampo.referenteInformatico}"></div>
+										</div>
+
+										<input id="submitButtonModalVerbale" type="submit" style="display: none;" />
+										<input type="hidden" th:field="${accreditamentoWrapper.verbaleValutazioneSulCampo.accreditamento}" />
+
+									</form>
+								</div>
+								<div class="modal-footer">
+	          						<label for="submitButtonModalVerbale" class="btn btn-success pull-right" th:text="#{label.salva}">Salva</label>
+	          						<button type="button" class="btn btn-primary pull-right" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
+	        					</div>
+							</div>
+						</div>
+					</div>
+				</th:block>
+
 				<!-- modale showPianoFormativoAll -->
 				<div id="showPianoAll-modal" class="modal fade modal-showPianoAll"
 					data-model-index="1" role="dialog">
@@ -182,10 +323,35 @@
 			<script th:inline="javascript">
 			/*<![CDATA[*/
 
+				var days;
+				var months;
+				var date;
+
 			    $(document).ready(function() {
 			    	if([[${reassignErrors}]]) {
 						$("#reassign-modal").modal("show");
 					}
+
+			    	if([[${verbaleErrors}]]) {
+			    		$("#verbale-edit-modal").modal("show");
+			    	}
+
+			    	//setta i nomi dei giorni e dei mesi a seconda delle label i18n anche per le date intermedie
+					days = getDayNamesShort();
+					months = getMonthNames();
+
+			    	date = $('#dataVerifica').daterangepicker({
+				        singleDatePicker: true,
+				        autoApply: true,
+				        autoUpdateInput: true,
+				        parentEl: $("#verbale-edit-modal"),
+				        format: "DD/MM/YYYY",
+				        locale: {
+					        daysOfWeek: days,
+			                monthNames: months,
+				        }
+				    })
+
 			    });
 
 			  	var tabSelected = "tab1";
