--- a/src/main/resources/templates/accreditamento/accreditamentoValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoValidate.html
@@ -184,14 +184,14 @@
 											</div>
 											<div th:if="${#fields.hasErrors('accreditamentoWrapper.verbaleValutazioneSulCampo.componentiSegreteria')} ? 'bad'" class="alert" th:errors="${accreditamentoWrapper.verbaleValutazioneSulCampo.componentiSegreteria}"></div>
 										</div>
-										<!-- referente informatico TODO chiarire ???-->
+										<!-- referente informatico -->
 										<div class="item form-group" th:classappend="${#fields.hasErrors('accreditamentoWrapper.verbaleValutazioneSulCampo.referenteInformatico')} ? 'bad'">
 											<label class="control-label col-md-4 col-sm-4 col-xs-12" for="referenteInformatico">
 												<span th:text="#{label.referente_informatico}">Referente Informatico</span>
 												<span class="required" th:if="${#sets.contains(accreditamentoWrapper.datiAccreditamento.procedureFormative, T(it.tredi.ecm.dao.enumlist.ProceduraFormativa).FAD)}">*</span>
 											</label>
 											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-												<select id="referenteInformatico" class="selectpicker multi"
+												<select id="referenteInformatico" class="selectpicker"
 													th:field="${accreditamentoWrapper.verbaleValutazioneSulCampo.referenteInformatico}"
 													data-width="100%"
 													data-style="btn-primary"
