Email alert del provider

--- a/src/main/resources/templates/evento/eventoFADShow.html
+++ b/src/main/resources/templates/evento/eventoFADShow.html
@@ -383,7 +383,7 @@
 								<tbody>
 									<tr th:each="metodologia, row : ${eventoWrapper.evento.riepilogoFAD.metodologie}">
 										<td th:text="${metodologia.key.nome}"></td>
-										<td th:text="${metodologia.value} + ' h'"></td>
+										<td th:text="${T(it.tredi.ecm.utils.Utils).formatOrario(metodologia.value)}"></td>
 									</tr>
 								</tbody>
 							</table>
