--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -1917,7 +1917,7 @@
 									<td th:text="${attivita.risultatoAtteso}"></td>
 									<td th:text="${attivita.obiettivoFormativo?.nome}"></td>
 									<td th:text="${attivita.metodologiaDidattica?.nome}"></td>
-									<td th:text="${attivita.oreAttivita}"></td>
+									<td th:text="${T(it.tredi.ecm.utils.Utils).formatOrario(attivita.oreAttivita)}"></td>
 									<td>
 											<a th:unless="${isEventoIniziato}" onclick="modificaAttivitaFrom('attivitaFAD',this)" class="btn btn-warning btn-table single" th:text="#{label.modifica}" data-toggle="modal" data-target=".modal-add-attivitaFAD">
 												<span><i class="fa fa-pencil"></i></span>
