--- a/src/main/resources/templates/evento/eventoShow.html
+++ b/src/main/resources/templates/evento/eventoShow.html
@@ -249,6 +249,7 @@
 									<th th:text="#{label.risultato_atteso}">RISULTATAO ATTESO</th>
 									<th th:text="#{label.tipologia_obiettivi_formativi}">TIPOLOGIA DI OBIETTIVI FORMATIVI</th>
 									<th th:text="#{label.metodologia_didattica}">METODOLOGIA DIDATTICA</th>
+									<th th:text="#{label.ore_attivita}">ORE ATTIVITA</th>
 								</tr>
 							</thead>
 							<tbody>
@@ -260,6 +261,7 @@
 									<td th:text="${attivita.risultatoAtteso}"></td>
 									<td th:text="${attivita.obiettivoFormativo?.nome}"></td>
 									<td th:text="${attivita.metodologiaDidattica?.nome}"></td>
+									<td th:text="${T(it.tredi.ecm.utils.Utils).formatOrario(attivita.oreAttivita)}"></td>
 								</tr>
 							</tbody>
 						</table>
