--- a/src/main/resources/templates/valutazione/valutazioneShowAll.html
+++ b/src/main/resources/templates/valutazione/valutazioneShowAll.html
@@ -232,6 +232,20 @@
 <!-- 					</th:block> -->
 
 <!-- 				</div> -->
+
+					<!-- riempito con chiamata ajax valutazioni sul campo (se l'accreditamento è standard) -->
+					<div class="x_panel" th:if="${accreditamentoWrapper.accreditamento.isStandard()}">
+	              		<div class="x_title">
+							<h2 style="display: inline" th:text="#{label.valutazioni_sul_campo}">label.valutazioni_sul_campo</h2>
+							<ul class="nav navbar-right panel_toolbox">
+			                    <li><a class="link-collapse-valutazione"><i class="fa iconToggleValutazione fa-chevron-down"></i></a></li>
+	                  		</ul>
+							<div class="clearfix"></div>
+						</div>
+
+						<div id="valutazioniSulCampoBlockValidate" class="valutazione-collapse"></div>
+
+					</div>
 			</div>
 			<script th:inline="javascript">
 			/*<![CDATA[*/
@@ -391,6 +405,14 @@
 // 							initTable($(this).find('table'));
 // 						});
 // 					});
+
+					//valutazioni sul campo
+					if([[${accreditamentoWrapper.accreditamento.isStandard()}]]) {
+						url = [[@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/verbaleValutazioneSulCampo/${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampo?.id}/insertValutazione?showRiepilogo=true|}]];
+						$('#valutazioniSulCampoBlockValidate').load(url + " #toValidateModal", function(){
+							initTable($(this).find('table'));
+						});
+					}
 				}
 
 					//mostra nascondi div con informazioni
