--- a/src/main/resources/templates/accreditamento/accreditamentoValutazioniSulCampo.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoValutazioniSulCampo.html
@@ -6,6 +6,34 @@
 </head>
 <body>
 	<div layout:fragment="content">
+
+		<!-- modale riepilogo valutazioni  -->
+		<div id="altreValutazioni-modal" class="modal fade modal-altreValutazioni"
+			data-model-index="1" role="dialog">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">
+							<span aria-hidden="true">×</span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel"
+							th:text="#{label.valutazioni_effettuate(#{label.effettuate_sul_campo})}">Valutazioni effettuate</h4>
+					</div>
+					<div class="modal-body">
+
+						<div id="toValidateModal">
+							<!-- fragment tutte le valutazioni -->
+							<th:block th:include="valutazione/valutazioneValutatoriAll :: valutatoriAll(verbaleWrapper)"></th:block>
+						</div>
+
+					</div>
+
+
+				</div>
+			</div>
+		</div>
+
+
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="x_panel">
@@ -13,6 +41,7 @@
 						<h2 th:text="#{label.valutazione_sul_campo}">Valutazione sul Campo</h2>
 						<div class="pull-right buttons-header">
 							<label th:if="${canValutaDomanda}" class="btn btn-success pull-right" th:text="#{label.salva}" for="submitButton"></label>
+							<button class="btn btn-primary pull-right" th:text="#{label.tutte_le_valutazioni}" data-toggle="modal" data-target=".modal-altreValutazioni"></button>
 							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${verbaleWrapper.accreditamento.id}/validate?tab=tab6|}"></a>
 							<button class="btn btn-primary pull-right" th:if="${canValutaDomanda}" onclick="selezionaTuttiSi()">Tutti sì</button>
 						</div>
