--- a/src/main/resources/templates/relazioneAnnuale/relazioneAnnualeList.html
+++ b/src/main/resources/templates/relazioneAnnuale/relazioneAnnualeList.html
@@ -43,7 +43,7 @@
 									<td th:text="${relazione.annoRiferimento}"></td>
 									<td>
 										<div class="button-container single">
-											<a class="btn btn-primary btn-table double" th:href="@{|/provider/${relazione.provider.id}/relazioneAnnuale/${relazione.id}/edit|}"><i class="fa fa-pencil"> </i> <span th:text="#{label.inserisci}"> </span></a>
+											<a th:if="${relazione.isRelazioneModificabile()}" class="btn btn-primary btn-table double" th:href="@{|/provider/${relazione.provider.id}/relazioneAnnuale/${relazione.id}/edit|}"><i class="fa fa-pencil"> </i> <span th:text="#{label.inserisci}"> </span></a>
 											<a class="btn btn-info btn-table double" th:href="@{|/provider/${relazione.provider.id}/relazioneAnnuale/${relazione.id}/show|}"><i class="fa fa-eye"> </i> <span th:text="#{label.mostra}"> </span></a>
 										</div>
 									</td>
