--- a/src/main/resources/templates/fragments/modaleStoricoValutazioni.html
+++ b/src/main/resources/templates/fragments/modaleStoricoValutazioni.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div th:fragment="modaleStoricoValutazioni" th:remove="tag">
-		<!-- modale showAllStorico -->
+		<!-- modale selezione Valutazione da storico -->
 		<div id="showAllStorico-modal"
 			class="modal fade modal-showAllStorico" data-model-index="1"
 			role="dialog">
@@ -37,6 +37,29 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- modale show riepilogo valutazione da storico -->
+		<div id="showAllValutazioneStorico-modal"
+			class="modal fade modal-showAllValutazioneStorico" data-model-index="1"
+			role="dialog">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">
+							<span aria-hidden="true">×</span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel"
+							th:text="#{label.riepilogo_valutazione}">Riepilogo valutazione</h4>
+						<button type="button" id="apriCheck" class="btn btn-primary pull-right with-margin-top toggleButtonsValutazione" th:text="#{label.apri_tutte}" onclick="openAllValutazione()"></button>
+						<button type="button" id="chiudiCheck" class="btn btn-primary pull-right with-margin-top toggleButtonsValutazione" style="display: none" th:text="#{label.chiudi_tutte}" onclick="closeAllValutazione()"></button>
+					</div>
+					<div class="modal-body">
+						<div id="container-valutazione-storico"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<script th:inline="javascript">
 		/*<![CDATA[*/
 
@@ -71,13 +94,28 @@
 							obj.dataValutazione.dayOfMonth + "/" + obj.dataValutazione.monthValue + "/" + obj.dataValutazione.year,
 							'<a class="btn btn-primary btn-lookup" onclick="mostraRiepilogoValutazione(' + obj.id + ')">'+[[#{label.seleziona}]]+'</a>'
 						]).draw(false);
-						console.log(obj)
-						console.log(obj.account)
-						console.log(obj.accreditamentoStatoValutazione)
 					}
 				});
 				$("#showAllStorico-modal").modal("show");
 			}
+
+			function mostraRiepilogoValutazione(valutazioneId) {
+				var url = [[@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/valutazione/|}]] + valutazioneId + "/show";
+				$("#container-valutazione-storico").html("");
+				$.get(url)
+				.done(function(data) {
+					$("#container-valutazione-storico").html(data);
+				})
+			  	.fail(function() {
+			    	alert( "error" );
+			 	})
+				$("#showAllValutazioneStorico-modal").modal("show");
+			}
+
+			$(".modal-showAllValutazioneStorico").on('hide.bs.modal', function() {
+				$("#apriCheck").show();
+				$("#chiudiCheck").hide();
+			})
 
 		/*]]>*/
 		</script>
