--- a/src/main/resources/templates/comunicazione/comunicazioneShow.html
+++ b/src/main/resources/templates/comunicazione/comunicazioneShow.html
@@ -78,13 +78,38 @@
 					</div>
 				</div>
 
+				<!-- modale conferma chiusura  -->
+				<div id="close-confirm-modal" class="modal fade modal-close-confirm"
+					data-model-index="1" role="dialog">
+					<div class="modal-dialog modal-sm">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal">
+									<span aria-hidden="true">×</span>
+								</button>
+								<h4 class="modal-title" id="myModalLabel"
+									th:text="#{label.conferma_chiusura_comunicazione}"></h4>
+							</div>
+							<div class="modal-body">
+
+								<div th:text="#{label.effetti_chiusura_comunicazione}"></div>
+
+							</div>
+							<div class="modal-footer">
+								<a th:href="@{|/comunicazione/${comunicazioneWrapper.comunicazione.id}/close|}" class="btn btn-danger pull-right"><span th:text="#{label.conferma}">Conferma</span></a>
+          						<button type="button" class="btn btn-default pull-right" data-dismiss="modal" th:text="#{label.annulla}">Annulla</button>
+							</div>
+
+						</div>
+					</div>
+				</div>
+
 				<div class="x_panel">
 					<div class="x_title">
 						<h2 th:text="#{label.visualizzazione_comunicazione}"></h2>
 						<div class="pull-right buttons-header">
 							<a th:if="${comunicazioneWrapper.canCloseComunicazione}" class="btn btn-danger pull-right"
-									th:href="@{|/comunicazione/${comunicazioneWrapper.comunicazione.id}/close|}"
-									th:text="#{label.chiudi}">Chiudi</a>
+									th:text="#{label.chiudi}" data-toggle="modal" data-target=".modal-close-confirm">Chiudi</a>
 							<a th:if="${comunicazioneWrapper.canRespond}" class="btn btn-success pull-right"
 									data-toggle="modal" data-target=".modal-response"
 									th:text="#{label.rispondi}">Rispondi</a>
